@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.1
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed desync when spawning ruins that had already been spawned previously.
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: 2021-01-27
